--- a/css/styles/main.css
+++ b/css/styles/main.css
@@ -1,15 +1,19 @@
-.header.row {
+.body {
   padding: 16px 32px;
   background: #333;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: ce;
 }
 
-.header.row h1 {
+.body h1 {
   text-align: center;
   color: white;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 14px;
-  color: #555;
+  color: white;
   margin: 0;
 }
 
