--- a/css/styles/main.sass
+++ b/css/styles/main.sass
@@ -1,17 +1,15 @@
-.header.row
+.body
   padding: 16px 32px
-  background: #333
+  height: 100%
+  position: absolute
+  width: 100%
+  display: flex
+  justify-content: center
+  flex-direction: column
+  align-items: center
 
-.header.row h1
+.body h1
   text-align: center
-  color: white
-  font-weight: 600
-  text-transform: uppercase
-  font-size: 14px
-  color: #555
-  margin: 0
-
-.button
-  padding: 5px 10px
-  border-radius: 3px
-  background-color: white
+  margin-bottom: 32px
+    p
+      margin: 0
